fix vertical alignment

--- a/src/components/form/FieldTemplate.module.scss
+++ b/src/components/form/FieldTemplate.module.scss
@@ -24,3 +24,7 @@
   padding-bottom: 0.25rem;
   width: 100%;
 }
+
+.horizontalFormGroup {
+  align-items: center;
+}
